--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StudyHub</title>
   </head>
-  <body class="bg-gradient-to-b from-blue-500 to-indigo-600 min-h-screen flex items-center justify-center">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
