--- a/Recursos.html
+++ b/Recursos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StudyHub</title>
-    <link rel="stylesheet" href="stylesRescursoNew.css">
+    <link rel="stylesheet" href="stylesRescurso.css">
 </head>
 <body class="fade-in">
     <header>
@@ -248,6 +248,6 @@
         </div>
     </footer>
 
-    <script src="scriptRescursosNew.js"></script>
+    <script src="scriptRescursos.js"></script>
 </body>
 </html>
