--- a/Recursos.html
+++ b/Recursos.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -13,7 +12,7 @@
             <a href="/" class="logo">StudyHub</a>
         </div>
         <div class="flex gap-4 mr-2">
-            <a href="/simulacros" class="text-white font-medium hover:underline">Simulacros</a>
+            <a href="/simulacros" class="nav-link">Simulacros</a>
         </div>
     </header>
 
