--- a/public/signup.html
+++ b/public/signup.html
@@ -1,133 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StudyHub - Sign Up</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <title>Registro StudyHub</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="container">
-        <div class="form-section">
-            <header>
-                <h1>StudyHub</h1>
-            </header>
-            <main>
-                <h2>Begin Your Adventure</h2>
-                <div class="message"></div>
-                <div class="social-login">
-                    <button class="social-btn google" aria-label="Sign up with Google">
-                        <i class="fab fa-google"></i>
-                    </button>
-                    <button class="social-btn twitter" aria-label="Sign up with Twitter">
-                        <i class="fab fa-twitter"></i>
-                    </button>
-                    <button class="social-btn apple" aria-label="Sign up with Apple">
-                        <i class="fab fa-apple"></i>
-                    </button>
-                </div>
+        <div class="form-container">
+            <div class="form-box">
+                <h1 class="welcome-title">Crea tu StudyHub</h1>
+                <a href="/" class="google-login-btn">
+                    <i class="fab fa-google"></i>
+                    Continuar con Google
+                </a>
                 <div class="divider">
-                    <span>or</span>
+                    <span>o</span>
                 </div>
-                <form id="signupForm">
+                <div class="form-toggle">
+                    <a href="login.html" class="toggle-btn">Iniciar Sesión</a>
+                    <button class="toggle-btn active">Registrarse</button>
+                </div>
+
+                <form id="signup-form" class="form">
                     <div class="input-group">
-                        <input type="text" id="username" placeholder="Username" aria-label="Username" required>
+                        <input type="text" placeholder="Nombre completo" required>
                     </div>
                     <div class="input-group">
-                        <input type="email" id="email" placeholder="Email" aria-label="Email" required>
+                        <input type="email" placeholder="Correo electrónico" required>
                     </div>
                     <div class="input-group">
-                        <div class="password-container">
-                            <input type="password" id="signup-password" placeholder="Password" aria-label="Password" required>
-                            <i class="fas fa-eye toggle-password" data-target="signup-password"></i>
-                        </div>
+                        <input type="password" placeholder="Contraseña" id="password" required>
+                        <span class="toggle-password" onclick="togglePassword('password')">
+                            <i class="fas fa-eye"></i>
+                        </span>
                     </div>
-                    <div class="options">
-                        <label>
-                            <input type="checkbox" id="remember"> Remember me
+                    <div class="input-group">
+                        <input type="password" placeholder="Confirmar contraseña" id="confirmPassword" required>
+                        <span class="toggle-password" onclick="togglePassword('confirmPassword')">
+                            <i class="fas fa-eye"></i>
+                        </span>
+                    </div>
+                    <div class="remember-me-container">
+                        <label class="remember-me">
+                            <input type="checkbox" name="remember">
+                            <span class="checkmark"></span>
+                            Recordarme
                         </label>
                     </div>
-                    <button type="submit" class="btn-start">Let's Start</button>
+                    <button type="submit" class="submit-btn">Registrarse</button>
                 </form>
-            </main>
-        </div>
-        <div class="image-section">
-            <div class="my-loader">
-                <div class="rubiks-cube">
-                    <div class="face front">
-                        <div class="cube color-1"></div> <!-- Magenta neón inicial -->
-                        <div class="cube color-2"></div> <!-- Amarillo neón inicial -->
-                        <div class="cube color-3"></div> <!-- Verde neón inicial -->
-                        <div class="cube color-4"></div> <!-- Cian neón inicial -->
-                        <div class="cube color-5"></div> <!-- Gris metálico inicial -->
-                        <div class="cube color-2"></div>
-                        <div class="cube color-3"></div>
-                        <div class="cube color-4"></div>
-                        <div class="cube color-1"></div>
-                    </div>
-                    <div class="face back">
-                        <div class="cube color-3"></div>
-                        <div class="cube color-1"></div>
-                        <div class="cube color-2"></div>
-                        <div class="cube color-4"></div>
-                        <div class="cube color-5"></div>
-                        <div class="cube color-1"></div>
-                        <div class="cube color-2"></div>
-                        <div class="cube color-3"></div>
-                        <div class="cube color-4"></div>
-                    </div>
-                    <div class="face left">
-                        <div class="cube color-2"></div>
-                        <div class="cube color-3"></div>
-                        <div class="cube color-4"></div>
-                        <div class="cube color-1"></div>
-                        <div class="cube color-5"></div>
-                        <div class="cube color-3"></div>
-                        <div class="cube color-4"></div>
-                        <div class="cube color-2"></div>
-                        <div class="cube color-1"></div>
-                    </div>
-                    <div class="face right">
-                        <div class="cube color-3"></div>
-                        <div class="cube color-1"></div>
-                        <div class="cube color-2"></div>
-                        <div class="cube color-4"></div>
-                        <div class="cube color-5"></div>
-                        <div class="cube color-1"></div>
-                        <div class="cube color-2"></div>
-                        <div class="cube color-3"></div>
-                        <div class="cube color-4"></div>
-                    </div>
-                    <div class="face top">
-                        <div class="cube color-4"></div>
-                        <div class="cube color-2"></div>
-                        <div class="cube color-1"></div>
-                        <div class="cube color-3"></div>
-                        <div class="cube color-5"></div>
-                        <div class="cube color-2"></div>
-                        <div class="cube color-1"></div>
-                        <div class="cube color-3"></div>
-                        <div class="cube color-4"></div>
-                    </div>
-                    <div class="face bottom">
-                        <div class="cube color-5"></div>
-                        <div class="cube color-3"></div>
-                        <div class="cube color-4"></div>
-                        <div class="cube color-1"></div>
-                        <div class="cube color-2"></div>
-                        <div class="cube color-3"></div>
-                        <div class="cube color-4"></div>
-                        <div class="cube color-5"></div>
-                        <div class="cube color-1"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="image-buttons">
-                <a href="login.html" class="img-btn">Log In</a>
             </div>
         </div>
+        <div id="canvas-container"></div>
     </div>
-    <script src="script.js"></script>
+
+    <!-- Font Awesome para los íconos -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    <!-- Scripts de la aplicación -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.min.js"></script>
+    <script src="js/three-scene.js"></script>
+    <script src="js/auth.js"></script>
+    <script>
+        // Esperar a que el DOM esté completamente cargado
+        document.addEventListener('DOMContentLoaded', function() {
+            console.log('DOM completamente cargado');
+            // Cargar el script de la escena 3D después de un pequeño retraso
+            setTimeout(function() {
+                const script = document.createElement('script');
+                script.src = 'js/three-scene.js';
+                document.body.appendChild(script);
+            }, 100);
+        });
+    </script>
 </body>
 </html>
